# fastapi-jinja2-study

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
fastapi_jinja2_study/: app.py
