[tool.poetry]
name = "fastapi-jinja2-study"
version = "0.2.0"
description = ""
authors = ["Kazumi Takahashi <ktakahashi@umn.co.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
Jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"
pre-commit = "^3.7.1"
black = "^24.4.2"
pytest = "^8.2.2"
faker = "^26.0.0"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
